--- a/css/style.css
+++ b/css/style.css
@@ -19,20 +19,18 @@ a{
 
 .content-container{
   width: 1000px;
-  border: solid 1px white;
+  border: solid 1px red;
 }
 /********* INTESTAZIONE ******/
 header {
-  /* min-height: 500px; */
-  /* debug */
-  background-color: red;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
 /* NAV BAR */
 #navbar-header{
-  min-height: 60px;
+  flex-basis: 60px;
   width: 1270px;
 }
 
@@ -42,8 +40,6 @@ header {
   float: left;
   display: flex;
   align-items:center;
-  /* debug */
-  border: solid 1px black;
 }
 
 #nav-menu li{
@@ -57,8 +53,6 @@ header {
   float: left;
   display: flex;
   align-items:center;
-  /* debug */
-  border: solid 1px black;
 }
 
 #logo{
@@ -91,12 +85,18 @@ header {
 
 /* JUMBOTRON */
 #jumbotron{
-  min-height: calc(500px - 60px);
+  min-height: 555px;
+  width: 100%;
+  background-image: url(../img/home-3-hero-bg.jpg);
+  background-size: contain;
+  background-position: center;
 }
 
 /******* PARTE CENTRALE *******/
 .container{
   min-height: 500px;
+  display: flex;
+  justify-content: center;
   /* debug */
   border: 1px solid black;
 }
