--- a/css/style.css
+++ b/css/style.css
@@ -90,15 +90,157 @@ header {
   background-image: url(../img/home-3-hero-bg.jpg);
   background-size: contain;
   background-position: center;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#icone-jumbo{
+  position: absolute;
+  right: 0;
+  top: 100px;
+  /* debug */
+  min-height: 40px;
+  width: 50px;
+  background-color: white;
+}
+
+#centro-jumbo{
+  color: white;
+  text-align: center;
+}
+
+#centro-jumbo h1{
+  font-size: 50px;
+  font-weight: lighter;
+  padding-top: 10px;
+  padding-bottom: 15px;
+}
+
+#centro-jumbo button{
+  padding: 15px 25px;
+  color: #1fad95;
+  font-weight: bold;
+  font-size: 13px;
+  border-radius: 8px;
+  border: none;
+  cursor:pointer;
+}
+
+#centro-jumbo button:hover{
+  background-color: #1fad95;
+  color: white;
 }
 
 /******* PARTE CENTRALE *******/
 .container{
-  min-height: 500px;
+  min-height: 650px;
   display: flex;
   justify-content: center;
   /* debug */
   border: 1px solid black;
+}
+
+#work-colture #wc-left,#work-colture #wc-right{
+  width: 50%;
+  padding: 130px 150px 100px 0;
+  float: left;
+  /* debug */
+  border: solid 1px black;
+  height: 80%;
+
+}
+
+.text-sections{
+  font-size: 13px;
+  color: gray;
+  letter-spacing: 2px;
+}
+
+.text-sections h4{
+  font-weight: lighter;
+}
+
+.text-sections h2{
+  font-size: 35px;
+  font-weight: 600;
+  color: black;
+  padding: 20px 0;
+}
+
+.text-sections .lighter{
+  font-weight: lighter;
+  color: #1fad95;
+}
+
+.text-sections p{
+  text-align: justify;
+  line-height: 17px;
+  padding-bottom: 20px;
+}
+
+#wc-left .text-sections a{
+  color: #1fad95;
+  font-weight: bold;
+}
+
+#wc-right{
+  position: relative;
+}
+
+#wc-right #coach{
+  width: 500px;
+  z-index: 200;
+  position: relative;
+}
+
+#wc-right #about{
+  height: 150px;
+  position: absolute;
+  top: 60px;
+  right: -60px;
+  border-radius: 5px;
+  z-index: 300;
+}
+
+#wc-right #greendots{
+  position: absolute;
+  top: 75px;
+  right: 30px;
+  z-index: 100;
+}
+
+#wc-right #shape02{
+  height: 100px;
+  position: absolute;
+  bottom: 0;
+  right: 50px;
+  z-index: 250;
+}
+
+#wc-down{
+  height: 20%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#wc-down .rates{
+  text-align: center;
+  margin-right: 70px;
+}
+
+.rates h3{
+  color:#1fad95;
+  font-size: 40px;
+  padding-bottom: 20px;
+}
+
+.rates span{
+  font-size: 15px;
+  font-weight: bold;
+  color: gray;
 }
 
 #subscribe-form{
@@ -106,7 +248,6 @@ header {
   /* debug */
   border: 1px solid black;
 }
-
 
 /******* FOOTER *******/
 footer{
