--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ header {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.lidrop:hover .dropdown{
+.active{
   display: block;
   z-index:50;
 }
