--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,44 @@ a{
 .content-container{
   width: 1200px;
 }
+
+/* REGOLE GENERALI TESTO SEZIONI */
+.text-sections{
+  font-size: 13px;
+  color: gray;
+  letter-spacing: 2px;
+}
+
+.text-sections h4{
+  font-weight: lighter;
+  font-size: 15px;
+}
+
+.text-sections h2{
+  font-size: 48px;
+  line-height: 1.17em;
+  font-weight: 600;
+  color: black;
+  padding: 20px 0;
+}
+
+.lighter{
+  font-weight: lighter;
+  color: #1fad95;
+}
+
+.text-sections p{
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 1.6em;
+  padding-bottom: 20px;
+}
+
+.titolo{
+  min-height: 20%;
+  text-align: center;
+  padding-top: 20px;
+}
 /********* INTESTAZIONE ******/
 header {
   display: flex;
@@ -34,12 +72,12 @@ header {
   align-items: center;
 }
 
-/* NAV BAR */
 #navbar-header{
   flex-basis: 60px;
   width: 100%;
 }
 
+/* NAV BAR menu */
 #nav-menu, #opzioni{
   min-height: 60px;
   width: 45%;
@@ -84,6 +122,7 @@ header {
   padding-bottom: 10px;
 }
 
+/* LOGO */
 #logo{
   min-height: 60px;
   width: 10%;
@@ -100,6 +139,7 @@ header {
   height: 30px;
 }
 
+/* OPZIONI */
 #opzioni{
   justify-content:flex-end;
   padding-right: 80px;
@@ -110,11 +150,28 @@ header {
   font-size: 20px;
 }
 
-
 #opzioni #search{
   padding: 10px;
   background-color: #e2e2e0;
   border-radius: 3px;
+}
+#cart{
+  position: relative;
+}
+
+#cart::after{
+position: absolute;
+top: -4px;
+right: 10px;
+min-width: 14px;
+height: 14px;
+border-radius: 15px;
+color: white;
+background-color: #1fad95;
+content: attr(datacount);
+font-weight: 500;
+font-size: 10px;
+line-height: 16px;
 }
 
 #search input{
@@ -200,42 +257,13 @@ header {
   float: left;
 }
 
-.text-sections{
-  font-size: 13px;
-  color: gray;
-  letter-spacing: 2px;
-}
-
-.text-sections h4{
-  font-weight: lighter;
-  font-size: 15px;
-}
-
-.text-sections h2{
-  font-size: 48px;
-  line-height: 1.17em;
-  font-weight: 600;
-  color: black;
-  padding: 20px 0;
-}
-
-.lighter{
-  font-weight: lighter;
-  color: #1fad95;
-}
-
-.text-sections p{
-  font-size: 15px;
-  font-weight: 400;
-  line-height: 1.6em;
-  padding-bottom: 20px;
-}
-
+/* LEFT */
 #wc-left .text-sections a{
   color: #1fad95;
   font-weight: bold;
 }
 
+/* RIGHT */
 #wc-right{
   position: relative;
 }
@@ -295,6 +323,8 @@ header {
 }
 
 /*  SECONDA SEZIONE upgrade your life */
+
+/* LEFT */
 #upgrade-left{
   width: 60%;
   height: 100%;
@@ -302,7 +332,6 @@ header {
   padding-top: 100px;
   position: relative;
 }
-
 
 #video{
   position: relative;
@@ -335,6 +364,7 @@ header {
   z-index: 40;
 }
 
+/* RIGHT */
 #upgrade-right{
   width: 40%;
   height: 100%;
@@ -348,12 +378,7 @@ header {
   background-color: #e2e2e0;
 }
 
-.titolo{
-  min-height: 20%;
-  text-align: center;
-  padding-top: 20px;
-}
-
+/* CAROUSEL */
 #carousel{
   min-height: 65%;
   display: flex;
@@ -424,6 +449,7 @@ header {
   padding-right: 3px;
 }
 
+/* CIRCLES */
 #circle{
   text-align: center;
 }
@@ -433,6 +459,7 @@ header {
   font-size: 15px;
 }
 
+/* INFO */
 .moreinfo{
   height: 15%;
   text-align: center;
@@ -449,6 +476,7 @@ header {
   position: relative;
 }
 
+/* LEFT */
 #ts-left{
   width: 40%;
   height: 100%;
@@ -456,7 +484,7 @@ header {
   float: left;
 }
 
-
+/* RIGHT */
 #ts-right{
   float: left;
   width: 60%;
@@ -468,6 +496,8 @@ header {
 }
 
 /* <!-- QUINTA SEZIONE team --> */
+
+/* LEFT */
 #team-left{
   width: 60%;
   height: 100%;
@@ -506,6 +536,7 @@ header {
   bottom: 150px;
 }
 
+/* RIGHT */
 #team-right{
   width: 40%;
   height: 100%;
@@ -556,8 +587,7 @@ header {
   font-size: 24px;
 }
 
-
-  /* <!-- SETTIMA SEZIONE FORM --> */
+/* <!-- SETTIMA SEZIONE FORM --> */
 #subscribe{
   min-height: 350px;
   position: relative;
@@ -614,6 +644,7 @@ header {
   bottom: 50px;
   right: 200px;
 }
+
 /******* FOOTER *******/
 footer{
   display: flex;
@@ -632,6 +663,7 @@ footer h4{
   color: white;
 }
 
+/* LEFT */
 #contact li{
   padding-top: 10px;
 }
@@ -645,9 +677,6 @@ footer h4{
   line-height: 2em;
 }
 
-#navbar-footer{
-  padding-left: 50px;
-}
 
 #social li{
   display: inline-block;
@@ -659,8 +688,10 @@ footer h4{
   color: white;
 }
 
+/* RIGHT */
 #navbar-footer{
   display: flex;
+  padding-left: 50px;
 }
 
 #navbar-footer .column{
