--- a/css/style.css
+++ b/css/style.css
@@ -374,34 +374,67 @@ text-align: center;
 
 }
 
-/* TERZA SEZIONE courses con corouseL */
+/* TERZA SEZIONE courses con corousel */
 #courses{
   background-color: #e2e2e0;
 }
 
 /* CAROUSEL */
-#carousel{
-  min-height: 65%;
+.carousel{
+  width:100%;  
   display: flex;
+  align-items: center;
+  position: relative;
+  margin-bottom: 20px;
+}
+
+.fa-chevron-left, .fa-chevron-right{
+  background-color:rgba(0, 0, 0, 0.7);
+  color: white;
+  font-size: 20px;
+  padding: 20px 10px;
+  cursor: pointer;
+  position:absolute;
+  z-index: 300;
+}
+
+.fa-chevron-right{
+  right:-50px;
+}
+
+.fa-chevron-left{
+  left:-50px;
+}
+
+.container-cards{
+  display: flex;
+  flex-wrap: nowrap;
+  overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 .card{
-  height: 100%;
-  width: calc((100% / 3) - 20px) ;
-  float: left;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 5px;
-  margin-right: 20px;
-  overflow: hidden;
+  margin-right: 30px;
+  width: 378px;
 }
 
-.card img{
+.cont-img{
   width: 100%;
+  overflow:hidden;
+  width: 378px;
+}
+.card img{
+  height:100%;
+  width:100%;
   border-top-left-radius: 5px;
   border-top-right-radius: 5px;
   transition: transform ease 1s;
+  z-index:200;
 }
 
 .card:hover img{
@@ -448,16 +481,6 @@ text-align: center;
 
 .description span i{
   padding-right: 3px;
-}
-
-/* CIRCLES */
-#circle{
-  text-align: center;
-}
-
-#circle i{
-  color: lightgray;
-  font-size: 15px;
 }
 
 /* INFO */
@@ -568,6 +591,11 @@ text-align: center;
 }
 #post-blog{
   min-height: 65%;
+}
+
+#post-blog .card{
+  float: left;
+  margin-right: 20px;
 }
 
 #post-blog .card img{
